--- a/package.json
+++ b/package.json
@@ -23,15 +23,19 @@
     "babel-preset-latest": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-register": "^6.18.0",
+    "bcrypt-nodejs": "0.0.3",
     "debug": "^2.6.0",
     "es6-promise": "^4.0.5",
     "form-urlencoded": "^1.5.0",
     "koa": "^2.0.0",
     "koa-better-body": "^3.0.2",
     "koa-convert": "^1.2.0",
+    "koa-jwt-mongo": "^1.2.0",
+    "koa-passport": "^3.0.0-rc.3",
     "koa-rest-router": "^1.0.0",
     "koa-router": "^5.4.0",
-    "mongoose": "^4.7.5"
+    "mongoose": "^4.7.5",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "babel-polyfill": "^6.20.0",
