--- a/package.json
+++ b/package.json
@@ -27,14 +27,15 @@
     "debug": "^2.6.0",
     "es6-promise": "^4.0.5",
     "form-urlencoded": "^1.5.0",
+    "jwt-simple": "^0.5.1",
     "koa": "^2.0.0",
     "koa-better-body": "^3.0.2",
+    "koa-compose": "^2.5.1",
     "koa-convert": "^1.2.0",
-    "koa-jwt-mongo": "^1.2.0",
     "koa-passport": "^3.0.0-rc.3",
     "koa-rest-router": "^1.0.0",
-    "koa-router": "^5.4.0",
     "mongoose": "^4.7.5",
+    "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
@@ -44,6 +45,7 @@
     "mocha": "^3.2.0",
     "nodemon": "^1.11.0",
     "supertest": "^2.0.1",
+    "supertest-as-promised": "^4.0.2",
     "supertest-koa-agent": "^0.3.0"
   }
 }
