--- a/package.json
+++ b/package.json
@@ -44,8 +44,6 @@
     "chai-jquery": "^2.0.0",
     "mocha": "^3.2.0",
     "nodemon": "^1.11.0",
-    "supertest": "^2.0.1",
-    "supertest-as-promised": "^4.0.2",
-    "supertest-koa-agent": "^0.3.0"
+    "supertest": "^2.0.1"
   }
 }
